# pylander

./: .gitignore  AGENTS.md  CODE_REVIEW.md  README.md  auto_zoom.py  bot.py  camera.py  engine_adapter.py  fps_overlay.py  game.py  hud.py  input.py  lander.py  level.py  level_viewer.py  main.py  minimap.py  overlays.py  physics.py  pyproject.toml  renderer.py  sensor.py  terrain.py
bots/: __init__.py  _scenario_common.py  drift.py  drop.py  ferry.py  hare.py  magpie.py  plunge.py  turtle.py
core/: bot.py  components.py  config.py  controllers.py  ecs.py  engine_adapter.py  eval.py  lander.py  lander_visuals.py  landing_sites.py  level.py  maths.py  physics.py  sensor.py  terrain.py
core/systems/: contact.py  control_routing.py  force_application.py  landing_site_motion.py  landing_site_projection.py  physics_sync.py  propulsion.py  refuel.py  scripted_control.py  sensor_update.py  state_transition.py
landers/: __init__.py  classic.py  differential.py  simple.py
levels/: __init__.py  common.py  level_1.py  level_climb.py  level_drift.py  level_drop.py  level_eval.py  level_ferry.py  level_flat.py  level_mountains.py  level_obstacles.py  level_plunge.py  scenario_common.py
tests/: test_auto_zoom.py  test_camera_math.py  test_game.py  test_physics.py  test_systems.py  test_terrain_math.py
ui/: auto_zoom.py  camera.py  fps_overlay.py  hud.py  minimap.py  overlays.py  renderer.py
utils/: input.py  plot.py  protocols.py
